@@ -1,43 +1,85 @@
 package com.BalancePro.Domain.service;
 
-import com.BalancePro.Domain.DTO.CategoryDTO.CategoryReqDTO;
-import com.BalancePro.Domain.DTO.CategoryDTO.CategoryResDTO;
+import com.BalancePro.Domain.DTO.category.CategoryCreateDTO;
+import com.BalancePro.Domain.DTO.category.CategoryResponseDTO;
+import com.BalancePro.Domain.DTO.category.CategoryUpdateDTO;
+import com.BalancePro.Domain.DTO.users.UserCreateDTO;
+import com.BalancePro.Domain.DTO.users.UserResponseDTO;
+import com.BalancePro.Domain.DTO.users.UserUpdateDTO;
 import com.BalancePro.Domain.entity.Category;
 import com.BalancePro.Domain.entity.User;
+import com.BalancePro.Domain.exceptions.ResourceAlreadyExistsException;
+import com.BalancePro.Domain.exceptions.ResourceNotFoundException;
+import com.BalancePro.Domain.mapper.CategoryMapper;
+import com.BalancePro.Domain.mapper.UserMapper;
 import com.BalancePro.Repository.CategoryRepository;
 import com.BalancePro.Repository.UserRepository;
+import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
 import java.util.UUID;
 import java.util.stream.Collectors;
 
-import static java.util.stream.Collectors.toList;
-
 @Service
 public class CategoryDomainService {
 
     private final CategoryRepository repository;
-    private final UserRepository repositoryUser;
+    private final CategoryMapper mapper;
+    private final UserRepository userRepositoryService;
 
-    public CategoryDomainService(CategoryRepository categoryRepository, UserRepository userRepository){
+    public CategoryDomainService(CategoryRepository categoryRepository, CategoryMapper categoryMapper, UserRepository userRepository){
         repository = categoryRepository;
-        repositoryUser = userRepository;
+        mapper = categoryMapper;
+        userRepositoryService = userRepository;
     }
 
-    public List<CategoryResDTO> getAll(){
-        List<Category> categories = repository.findAll();
-
-        return categories.stream().map(category -> new CategoryResDTO(
-                category.getId(),
-                category.getName(),
-                category.getDescription(),
-                category.getUser()
-        )).toList();
+    public List<CategoryResponseDTO> getAll(){
+        return repository.findAll().stream()
+                .map(mapper::toResponseDTO)
+                .collect(Collectors.toList());
     }
 
-    public Category getById(UUID id){
-        return repository.getReferenceById(id);
+    public CategoryResponseDTO getById(UUID id){
+        return mapper.toResponseDTO(repository.getReferenceById(id));
+    }
+
+    @Transactional
+    public CategoryResponseDTO createCategory(CategoryCreateDTO createDTO) {
+        if (repository.findByName(createDTO.getName()).isPresent()) {
+            throw new ResourceAlreadyExistsException("Categoria já existe: " + createDTO.getName());
+        }
+
+        User user = userRepositoryService.getReferenceById(createDTO.getUserId());
+
+        Category category = mapper.toEntity(createDTO);
+        category.setUser(user);
+        Category savedCategory = repository.save(category);
+        return mapper.toResponseDTO(savedCategory);
+    }
+
+    @Transactional
+    public CategoryResponseDTO updateCategory(UUID id, CategoryUpdateDTO updateDTO) {
+        Category category = repository.findById(id)
+                .orElseThrow(() -> new ResourceNotFoundException("Categoria não encontrado com ID: " + id));
+
+        if (updateDTO.getName() != null && !updateDTO.getName().equals(category.getName()) &&
+               repository.findByName(updateDTO.getName()).isPresent()) {
+            throw new ResourceAlreadyExistsException("Categoria já existente: " + updateDTO.getName());
+        }
+
+        mapper.updateEntityFromDto(updateDTO, category);
+        Category updatedCategory = repository.save(category);
+        return mapper.toResponseDTO(updatedCategory);
+    }
+
+    @Transactional
+    public void deleteCategory(UUID id) {
+        if (repository.existsById(id)) {
+            throw new ResourceNotFoundException("Categoria não encontrado com ID: " + id);
+        }
+        repository.deleteById(id);
     }
 
     public void create (CategoryReqDTO body){
